change about me page

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -196,36 +196,6 @@
 
 
 <div>
-<h4>
-<p><span class="fa fa-briefcase about-icon"></span> currently an <font color='#FF652F'><b>Associate Engineer at Mastercard</b></font><br></p>
-<p><span class="fas fa-chart-line about-icon"></span> on the <font color='#14a76c'><b>economic and market insights team </b></font><br></p>
-<span class="fa fa-briefcase about-icon"></span> Focused on <font color='#FFCF75'><b>data science &amp; web development</b></font>
-</h4>
-<style>
-.column-left-half{
-  float: left;
-  width: 50%;
-  height: 100%;
-  border: 1px solid white;
-  padding: 20px;
-}
-
-.column-left-half .h1, h1{
-  text-align: center;
-}
-
-.column-right-half .h1, h1{
-  text-align: center;
-}
-
-.column-right-half{
-  float: right;
-  width: 50%;
-  height: 100%;
-  border: 1px solid white;
-}
-</style>
-<h4 id="this-section-will-have-three-columns">This section will have three columns</h4>
 <div class="row" style="height: 500px;">
 <div class="column-left-half">
 <h1>
@@ -236,22 +206,13 @@
 <p>on the <font color='#14a76c'><b>economic and market insights team </b></font><br></p>
 focused on <font color='#FFCF75'><b>data science &amp; web development</b></font>
 </h5>
-<!-- associate engineer at mastercard (economics group) -->
-<!-- currently an associate engineer at mastercard.  -->
-<!-- mainly focused on data science and web development.  -->
-<!-- some of my recent projects include: -->
-<!-- - early warning (recession) model -->
-<!-- - html presentation presented to the c-suite -->
-<!-- previously a consultant at factset research systems where I worked  -->
-<!-- with quantitative asset management firms.  -->
+<!-- end column left -->
 </div>
 <div class="column-right-half">
 <h1>
 <span class="fas fa-chart-line about-icon"></span>
 </h1>
-<p><strong>7</strong> seven<br />
-<strong>8</strong> eight<br />
-<strong>9</strong> nine</p>
+<!-- end column right -->
 </div>
 </div>
 <!-- end -->
