change mini about me

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -292,7 +292,7 @@
     <header>
       <h1>About</h1>
     </header>
-    <p> </p>
+    <p>passionate about data science, investing, and R</p>
     <footer>
       <a href="/about" class="button">Learn More</a>
     </footer>
