push mountain background to entire site

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
 <title>Contact - Zac Garland</title>
-<meta name="description" content="passionate about data science, investing, and R">
+<meta name="description" content="data science, investing, and R">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
