--- a/public/about/index.html
+++ b/public/about/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
 <title>About Me - Zac Garland</title>
-<meta name="description" content="passionate about data science, investing, and R">
+<meta name="description" content="data science, investing, and R">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -122,8 +122,8 @@
   
 </header>
 
-    <div>
-      <main id="site-about">
+    <div class ="parallax">
+      <main id="site-main">
         <section id="site-intro">
   <a href="/"><img src="/img/main/my_face.png" class="circle" width="200px" alt="" /></a>
   <header>
