--- a/public/about/index.html
+++ b/public/about/index.html
@@ -23,7 +23,7 @@
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About Me"/>
 <meta name="twitter:description" content=""/>
-<meta name="twitter:site" content="@ZacGarland1"/>
+<meta name="twitter:site" content="@zac_garland_"/>
 
   
 
@@ -122,7 +122,6 @@
   
 </header>
 
-    <div class ="parallax">
       <main id="site-main">
         <section id="site-intro">
   <a href="/"><img src="/img/main/my_face.png" class="circle" width="200px" alt="" /></a>
@@ -130,7 +129,7 @@
     
   </header>
   <main>
-    <p>self taught developer<br> investor & data aficionado</p>
+    <p>self taught developer<br> investor & data scientist</p>
   </main>
   
     <footer>
@@ -164,7 +163,7 @@
 
 <li><a href="//instagram.com/zac_garland_" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<li><a href="//twitter.com/ZacGarland1" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
+<li><a href="//twitter.com/zac_garland_" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
 
 
 
@@ -221,6 +220,5 @@ focused on <font color='#FFCF75'><b>data science &amp; web development</b></font
           </div>
         </article>
       </main>
-    </div>
   </body>
 </html>
