--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -22,7 +22,7 @@
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Contact"/>
 <meta name="twitter:description" content=""/>
-<meta name="twitter:site" content="@ZacGarland1"/>
+<meta name="twitter:site" content="@zac_garland_"/>
 
   
 
@@ -128,7 +128,7 @@
     
   </header>
   <main>
-    <p>self taught developer<br> investor & data aficionado</p>
+    <p>self taught developer<br> investor & data scientist</p>
   </main>
   
     <footer>
@@ -162,7 +162,7 @@
 
 <li><a href="//instagram.com/zac_garland_" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<li><a href="//twitter.com/ZacGarland1" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
+<li><a href="//twitter.com/zac_garland_" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
 
 
 
@@ -331,7 +331,7 @@
 
 <li><a href="//instagram.com/zac_garland_" target="_blank" rel="noopener" title="Instagram" class="fab fa-instagram"></a></li>
 
-<li><a href="//twitter.com/ZacGarland1" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
+<li><a href="//twitter.com/zac_garland_" target="_blank" rel="noopener" title="Twitter" class="fab fa-twitter"></a></li>
 
 
 
