changed about me section and changed netlify name to zac-garland

--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -1,29 +1,22 @@
 ---
 date: "2014-04-09"
-title: About Me
+title: a mountain man who fell in love with coding, investing, & data science
 ---
 
 
 
 <div>
-<div class="row" style="height: 500px;">
-<div class="column-left-half">
-<h1>
-<span class="fa fa-briefcase about-icon"></span>
-</h1>
-<h5>
-<p>currently an <font color='#FF652F'><b>Associate Engineer at Mastercard</b></font><br></p>
-<p>on the <font color='#14a76c'><b>economic and market insights team </b></font><br></p>
-focused on <font color='#FFCF75'><b>data science &amp; web development</b></font>
-</h5>
-<!-- end column left -->
-</div>
-<div class="column-right-half">
-<h1>
-<span class="fas fa-chart-line about-icon"></span>
-</h1>
-<!-- end column right -->
-</div>
+
+<div style="text-transform: lowercase;">
+<p>Hi my name is Zac Garland!</p>
+<p>I’m a self taught developer impassioned about investing &amp; data science.</p>
+<p>Professionally, I’m an associate engineer @ Mastercard’s economics institute. my work is focused on data science &amp; web development.
+lately i’ve been working on a macroeconomic recession model &amp; an html business proposal for the c-suite. previously, I was a consultant at FactSet
+where I worked with institutional asset managers on their quant workflows.</p>
+<p>Outside of work, I’m a mountain man. I live in Breckenridge, colorado. you can find me with my pup (winston) in the woods, knee deep in a river, up a mountain, or walking around town.</p>
+<p>learn more about my coding journey <a>here</a>.</p>
+<p>feel free to <a>contact me</a> about equity research, data science, or future opportunities.</p>
+<hr>
 </div>
 <!-- end -->
 </div>
