updated about me

--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -9,13 +9,15 @@ title: a mountain man who fell in love with coding, investing, & data science
 
 <div style="text-transform: lowercase;">
 <p>Hi my name is Zac Garland!</p>
-<p>I’m a self taught developer impassioned about investing &amp; data science.</p>
-<p>Professionally, I’m an associate engineer @ Mastercard’s economics institute. my work is focused on data science &amp; web development.
+<p>I’m a self taught developer that’s passionate about equity research &amp; data science.</p>
+<p>Outside of work, I’m best described as a mountain man. I live in Breckenridge, colorado &amp; can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town.</p>
+<p>i have a degree in finance &amp; during my tenure led multiple non-profit efforts. the most successful endeavor, bears go bald, raised over $60,000 for children’s cancer research.<br></p>
+<!-- bill gates and warren buffett serve the world in a way i aspire to; spending the first half of their lives accumulating wealth, & the second half giving it all away. -->
+<p>Professionally, I’m an associate engineer @ Mastercard. i’m part of their economics institute &amp; mainly focus on data science &amp; web development.
 lately i’ve been working on a macroeconomic recession model &amp; an html business proposal for the c-suite. previously, I was a consultant at FactSet
 where I worked with institutional asset managers on their quant workflows.</p>
-<p>Outside of work, I’m a mountain man. I live in Breckenridge, colorado. you can find me with my pup (winston) in the woods, knee deep in a river, up a mountain, or walking around town.</p>
-<p>learn more about my coding journey <a>here</a>.</p>
-<p>feel free to <a>contact me</a> about equity research, data science, or future opportunities.</p>
+<p>you can learn more about my coding journey <a>here</a>.</p>
+<p>feel free to <a href="/contact">contact me</a> about equity research, data science, or future opportunities.</p>
 <hr>
 </div>
 <!-- end -->
