push link changes and updated post titles/descriptions

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -206,7 +206,7 @@
 <p>Professionally, I’m an associate engineer @ Mastercard. i’m part of their economics institute &amp; mainly focus on data science &amp; web development.
 lately i’ve been working on a macroeconomic recession model &amp; an html business proposal for the c-suite. previously, I was a consultant at FactSet
 where I worked with institutional asset managers on their quant workflows.</p>
-<p>you can learn more about my coding journey <a>here</a>.</p>
+<p>you can learn more about my coding journey <a href="/blog/coding-in-r-a-love-story/">here</a>.</p>
 <p>feel free to <a href="/contact">contact me</a> about equity research, data science, or future opportunities.</p>
 <hr>
 <br><br>
