changed google font api source

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -132,6 +132,7 @@
   <a style="border-bottom:solid 1px transparent;" href="/"><img src="/img/main/my_face.png" class="circle" width="200px" alt="" /></a>
   <header>
     
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Pacifico:300,400,600,700&amp;lang=en" />
   </header>
   <main>
   <p class="shadow zac">Zac</p>
