changed particles source

--- a/public/equity-research/index.html
+++ b/public/equity-research/index.html
@@ -506,7 +506,7 @@ tq_get(&quot;AAPL&quot;) %&gt;%
 
   <script src=/js/particles.js></script>
   <script src=/js/app.js></script>
-  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src=/js/particles.min.js></script>
 
 
     </div>
