--- a/public/about/index.html
+++ b/public/about/index.html
@@ -264,7 +264,7 @@ where I worked with institutional asset managers on their quant workflows.</p>
 
   <script src=/js/particles.js></script>
   <script src=/js/app.js></script>
-  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src=/js/particles.min.js></script>
 
 
     </div>
