--- a/public/about/index.html
+++ b/public/about/index.html
@@ -411,7 +411,7 @@ a self taught developer, investor, and data scientist. <br><br>
 
 Outside of work, I'm a mountain man. I live in Breckenridge, Colorado & can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town. 
 
-I have a degree in finance & led a few non-profits during college. the most successful endeavor, <a href="https://youtu.be/48mSJeCulIk" style="color:#2ebaae;">bears go bald</a>, raised over $60,000 for children's cancer research.<br><br>
+I have a degree in finance & led a few non-profits during college. the most successful endeavor, <a href="https://youtu.be/48mSJeCulIk" style="color:#2ebaae;" target="_blank">bears go bald</a>, raised over $60,000 for children's cancer research.<br><br>
 
 
 
