--- a/content/equity-research/_index.html
+++ b/content/equity-research/_index.html
@@ -1,7 +1,7 @@
 ---
 title: Equity Research in R
 author: Zac Garland
-date: "2019-09-19"
+date: "2019-12-15"
 slug: equity-research-in-r
 categories:
   - R
@@ -27,6 +27,6 @@ type: post
 </h2>
 </center>
 <div style="position:relative;padding-top:56.25%;">
-<iframe src="https://player.vimeo.com/video/360549999?quality=1080p&amp;autoplay=1&amp;rel=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;">
+<iframe src="https://player.vimeo.com/video/360549999?quality=1080p&amp;autoplay=1#t=5s&amp;rel=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;">
 </iframe>
 </div>
