--- a/public/equity-research/index.html
+++ b/public/equity-research/index.html
@@ -289,7 +289,7 @@
 </h2>
 </center>
 <div style="position:relative;padding-top:56.25%;">
-<iframe src="https://player.vimeo.com/video/360549999?quality=1080p&amp;autoplay=1#t=5s&amp;rel=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;">
+<iframe src="https://player.vimeo.com/video/360549999?quality=1080p&amp;background=1&amp;autoplay=1#t=5s&amp;rel=0&amp;muted=1" frameborder="0" allow="autoplay; fullscreen" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;">
 </iframe>
 </div>
 
