--- a/content/about/_index.html
+++ b/content/about/_index.html
@@ -10,7 +10,7 @@ title: a mountain man who fell in love with coding, investing, & data science
 <div style="text-transform: lowercase;">
 <p>Hi my name is Zac Garland!</p>
 <p>I’m a self taught developer that’s passionate about equity research &amp; data science.</p>
-<p>Outside of work, I’m best described as a mountain man. I live in Breckenridge, colorado &amp; can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town.</p>
+<p>Outside of work, I’m best described as a mountain man. I live in Breckenridge, colorado &amp; can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town.<br></p>
 <p>i have a degree in finance &amp; during my college career led multiple non-profit efforts. the most successful endeavor, bears go bald, raised over $60,000 for children’s cancer research.<br></p>
 <!-- bill gates and warren buffett serve the world in a way i aspire to; spending the first half of their lives accumulating wealth, & the second half giving it all away. -->
 <p>Professionally, I’m an associate engineer @ Mastercard. i’m part of their economics institute &amp; mainly focus on data science &amp; web development.
