--- a/public/index.html
+++ b/public/index.html
@@ -411,18 +411,15 @@ window.onload = function() {
 
 a self taught developer, investor, and data scientist. <br><br>
 
-Outside of work, I'm a mountain man. I live in Breckenridge, Colorado & can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town. 
+Professionally, I'm an associate engineer @ Mastercard. i'm part of their economics institute & mainly focus on data science & web development. previously, I was a consultant at FactSet where I worked with investment managers on their quant workflows.  <br><br>
 
-I have a degree in finance & led a few non-profits during college. the most successful endeavor, <a href="https://youtu.be/48mSJeCulIk" style="color:#2ebaae;" target="_blank">bears go bald</a>, raised over $60,000 for children's cancer research.<br><br>
-
-Professionally, I'm an associate engineer @ Mastercard. i'm part of their economics institute & mainly focus on data science & web development.
-recently i've been working on a macroeconomic recession model & an html business proposal for the c-suite. previously, I was a consultant at FactSet
-where I worked with institutional asset managers on their quant workflows.  
+Outside of work, I'm a mountain man. I live in Breckenridge, Colorado & can usually be found with my pup (winston) knee deep in a river, up a mountain, or walking around town. I have a degree in finance & led a few non-profits during college. the most successful endeavor, <a href="https://youtu.be/48mSJeCulIk" style="color:#2ebaae;" target="_blank">bears go bald</a>, raised over $60,000 for children's cancer research.<br><br>
 
 
 
 
-<br><br>
+a sample of my work can be found <a href="/equity-research/" style="color:#2ebaae;"> here</a>.
+
 
 feel free to <a href="/contact" style="color:#2ebaae;">contact me</a> about equity research, data science, or future opportunities. 
 </p>
